# docs-mintlify/openapi/client.json
@@ -3837,12 +3837,6 @@
                           "custom"
                         ]
                       },
-                      "free_trial": {
-                        "type": "array",
-                        "items": {
-                          "type": "integer"
-                        }
-                      },
                       "server_only": {
                         "type": "boolean",
                         "default": true
@@ -4065,12 +4059,6 @@
                             "team",
                             "custom"
                           ]
-                        },
-                        "free_trial": {
-                          "type": "array",
-                          "items": {
-                            "type": "integer"
-                          }
                         },
                         "server_only": {
                           "type": "boolean",
